[package]
edition = "2024"
name = "epd-e6-driver"
version = "0.1.1"
license = "MIT OR Apache-2.0"

[workspace]
members = ["examples/display-test", "examples/async-display-test", "epd-e6-driver-tests"]
default-members = ["."]

[features]
default = ["blocking"]
blocking = []
async = ["dep:embedded-hal-async"]

[workspace.dependencies]
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }
rp235x-hal = { version = "0.3", features = [
    "rt",
    "critical-section-impl",
    "binary-info",
] }
embedded-hal = { version = "1.0.0" }
embedded-hal-bus = "0.3.0"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
embedded-alloc = "0.6.0"
embedded-hal-async = { version = "1.0.0" }

[dependencies]
embedded-hal-async = { workspace = true, optional = true }
defmt = { workspace = true }
embedded-hal = { workspace = true }
embedded-graphics = { workspace = true }

# cargo build/run
[profile.dev]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

# cargo build/run --release
[profile.release]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 2
overflow-checks = false

[profile.release.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

# cargo test
[profile.test]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo test --release
[profile.bench]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 3
